--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "feather-icons": "^4.29.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-feather": "^2.0.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/test-utils": "^2.4.6",
     "jsdom": "^26.0.0",
+    "sass-embedded": "^1.85.1",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.5"
