--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.8.1",
     "feather-icons": "^4.29.2",
     "pinia": "^3.0.1",
+    "swiper": "^11.2.4",
     "vue": "^3.5.13",
     "vue-feather": "^2.0.0",
     "vue-router": "^4.5.0"
