--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@vueuse/head": "^2.0.0",
     "axios": "^1.8.1",
     "feather-icons": "^4.29.2",
     "pinia": "^3.0.1",
